fixed up the portfolo and added text descriptions. still need to resize images for better formatting on mobile and ipad

--- a/stylesheets/portfolio.css
+++ b/stylesheets/portfolio.css
@@ -112,15 +112,22 @@ a:hover {
     .project-gallery {
         margin-top: 5%;
         text-align: center;
+        display: inline-block;
+        margin-left: 5%;
     }
 
     .project-text {
         margin-bottom: 5%;
         padding: 5px 5px 5px 5px;
+        display: inline-block;
+    }
+
+    .project-text > p {
+        float: left;
+        width: 100px;        
     }
 
     img {
         margin-bottom: 5%;
-        margin-top: 5%;
-    }
+]    }
 }
